Fix: Align text in footer

--- a/site/style.css
+++ b/site/style.css
@@ -495,7 +495,7 @@ header {
 
 footer {
     background-color: #005BC1;
-    height: 265px;
+    height: 225px;
     margin-top: 120px;
 }
 
@@ -503,6 +503,7 @@ footer {
     display: flex;
     justify-content: space-between;
     padding-top: 40px;
+    text-align: center;
 }
 
 .footer__top-phone {
